Get nearest vendor
